--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /OperadoresLogicos/nbproject/private/
 /OperadoresLogicos/build/
+/OperadoresAritmeticos/nbproject/private/
+/OperadoresAritmeticos/build/
+/OperacionesConCadenas/nbproject/private/
+/OperacionesConCadenas/build/
+/Arrays/nbproject/private/
