--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 /OperacionesConCadenas/nbproject/private/
 /OperacionesConCadenas/build/
 /Arrays/nbproject/private/
+/OperadoresDeComparacion/nbproject/private/
+/OperadoresDeComparacion/build/
+/SwitchCase/nbproject/private/
+/SwitchCase/build/
+/CicloWhile/nbproject/private/
+/CicloWhile/build/
+/EstructuraDatos/nbproject/private/
